# steam-market-history

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  app.py  generate.py  pyproject.toml  requirements.txt  run.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml
assets/css/: styles.css
assets/js/: scripts.js  search-table.js
data/: addData.txt  your .csv filed would be generated here.txt
libary/: view.css
steam_market_history/: __init__.py  console.py  main.py  models.py
steam_market_history/modules/: auth.py  exporter.py  generator.py  steam.py
steam_market_history/templates/: index.html
templates/: index.html
tests/: test_export.py  test_exporter_module.py  test_exporter_price_parsing.py  test_version.py
