[tool.poetry]
name = "steam-market-history"
version = "3.1.1"
description = "An easy-to-use CLI to export your steam market history to various formats"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fabieu/steam-market-history"
keywords = ["steam", "CLI"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
Jinja2 = "^3.1.2"
typer = "^0.7.0"
steam = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
autopep8 = "^2.0.2"
vermin = "^1.5.1"

[tool.poetry.scripts]
steam-market-history = "steam_market_history.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
