[tool.poetry]
name = "steam-market-history"
version = "3.1.4"
description = "An easy-to-use CLI to export your steam market history to various formats"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fabieu/steam-market-history"
keywords = ["steam", "CLI"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
Jinja2 = "^3.1.4"
typer = ">=0.13,<0.21"
steam = { git = "https://github.com/FailSpy/steam-py-lib", rev = "3db3cfe04fb16fc9c212244d96c86b5164905c82" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
autopep8 = "^2.3.1"
vermin = "^1.7.0"

[tool.poetry.scripts]
steam-market-history = "steam_market_history.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
