[project]
name = "steam-market-history"
version = "3.1.5"
description = "An easy-to-use CLI to export your steam market history to various formats"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Fabian Eulitz", email = "dev@sustineo.de" }
]
keywords = ["steam", "cli", "market", "history", "export"]
dependencies = [
    "beautifulsoup4>=4.14.3,<5.0.0",
    "Jinja2>=3.1.6,<4.0.0",
    "typer>=0.21.0,<1.0.0",
    "steam-next>=2.1.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "autopep8>=2.3.2,<3.0.0",
    "vermin>=1.8.0,<2.0.0",
]

[tool.poetry.urls]
repository = "https://github.com/fabieu/steam-market-history"

[tool.poetry.scripts]
steam-market-history = "steam_market_history.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
